Added the button to toggle between char and message data. It doesn't completely work: on the main chart when zooming in and out the y-axis and the stack area aren't updated correctly and the top of the chart is cropped. When changing the data type, the context chart is cut and the y-axis is buggy as well.

--- a/MessengerViewer.html
+++ b/MessengerViewer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-  <meta charset="utf-8">
   <head>
+  <meta charset="utf-8">
     <style>
 
       .area {
@@ -27,9 +27,31 @@
         fill: transparent !important;                                 
       }
 
+      .toggle_data_type_button text {
+        font-size: 12px;
+        fill: white;
+        pointer-events: none;
+        text-anchor: middle;
+        -moz-user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+        cursor: pointer;   
+      }
+
+      .toggle_data_type_button rect {
+        width: 100px;
+        height: 40px;
+        cursor: pointer;   
+      }
+
+      .toggle_data_type_button rect.pressed {
+        fill: #000f2b;
+      }
+
     </style>
 
     <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="d3.button.js"></script>
   </head>
   <body>
     <center>
