Updated the HTML file to make it (hopefully) more Github Page firendly.

--- a/MessengerViewer.html
+++ b/MessengerViewer.html
@@ -29,8 +29,7 @@
 
     </style>
 
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="d3.button.js"></script>
+    <script type="text/javascript" src="d3.v4.min.js"></script>
   </head>
   <body>
     <center>
